# exatrkx-service

./: Dockerfile  README.md
custom_backend_cpu/: README.md
custom_backend_cpu/backend/: CMakeLists.txt  make.sh
custom_backend_cpu/backend/cmake/: TritonExatrkxCPUBackendConfig.cmake.in
custom_backend_cpu/backend/src/: exatrkxcpu.cc
custom_backend_cpu/model_repo/exatrkxcpu/: config.pbtxt
custom_backend_gpu/: README.md
custom_backend_gpu/backend/: CMakeLists.txt  make.sh
custom_backend_gpu/backend/cmake/: TritonExatrkxGPUBackendConfig.cmake.in
custom_backend_gpu/backend/src/: exatrkxgpu.cc
custom_backend_gpu/model_repo/exatrkxgpu/: config.pbtxt
ensemble_backend/: README.md  nginx.conf  prometheus_template.yml  triton_metrics.py
ensemble_backend/model_repos/: README.md  test_triton_model.py
ensemble_backend/model_repos/models/applyfilter/: config.pbtxt
ensemble_backend/model_repos/models/applyfilter/1/: model.py
ensemble_backend/model_repos/models/embed/: config.pbtxt
ensemble_backend/model_repos/models/filter/: config.pbtxt
ensemble_backend/model_repos/models/frnn/: config.pbtxt
ensemble_backend/model_repos/models/frnn/1/: model.py
ensemble_backend/model_repos/models/gnn/: config.pbtxt
ensemble_backend/model_repos/models/wcc/: config.pbtxt
ensemble_backend/model_repos/models/wcc/1/: model.py
ensemble_backend/python_backends/: README.md  base-cuda11-mamba-py38.Dockerfile  build.sh
ensemble_backend/scripts/: deploy_triton.sh  monitor_triton.sh  run_exatrkx.sh  setup.sh  setup_env.cfg  start_tritonserver.sh
evaluation/: README.md  evaluate_time.py  inference_gpu_direct.sh  inference_gpu_triton.sh
evaluation/plotting/: plot_1GPU.ipynb  plot_backend.py  utils.py
evaluation/scripts/: convert_csv2json.py  evaluate_triton.sh
evaluation/slurm/: slurm_1gpu.sub
exatrkx_cpu/: CMakeLists.txt  ExaTrkXTrackFinding.cpp  ExaTrkXTrackFinding.hpp  ExaTrkXUtils.cpp  ExaTrkXUtils.hpp  README.md  inference-cpu-throughput.cpp  inference-cpu.cpp  make.sh
exatrkx_gpu/: CMakeLists.txt  ExaTrkXTiming.hpp  ExaTrkXTrackFinding.cpp  ExaTrkXTrackFinding.hpp  ExaTrkXUtils.cpp  ExaTrkXUtils.hpp  README.md  inference-gpu-throughput.cpp  inference-gpu.cpp  make.sh  weaklyConnectedComponentsCugraph.hpp
exatrkx_gpu/libFRNN/: CMakeLists.txt
exatrkx_gpu/libFRNN/include/: counting_sort.h  find_nbrs.h  prefix_sum.h
exatrkx_pipeline/: CMakeLists.txt  README.md  inference.cpp  make.sh  time_t1_s4.csv
exatrkx_pipeline/ExaTrkX/: CMakeLists.txt
exatrkx_pipeline/ExaTrkX/include/: ExaTrkXTriton.hpp
exatrkx_pipeline/datanmodels/: in_e1000.json
exatrkx_triton/: CMakeLists.txt  ExaTrkXTrackFindingTriton.cpp  ExaTrkXTrackFindingTriton.hpp  ExaTrkXTriton.hpp  README.md  inference-aas.cpp  make.sh
triton_service/: metrics_execution_time.csv  metrics_request_time.csv  request_time.csv
triton_service/model_repos/inputs/: applyfilter_output_EDGE_LIST_AFTER_FILTER.csv  embed_output_OUTPUT__0.csv  filter_output_OUTPUT__0.csv  frnn_output_OUTPUT0.csv  gnn_output_OUTPUT__0.csv  wcc_output_OUTPUT0.csv
